--- a/src/less/theme/variables.less
+++ b/src/less/theme/variables.less
@@ -14,6 +14,16 @@
 //
 // Colors
 //
+@global-color:                                  #9ca8b0;
+@global-emphasis-color:                         #b1bbc1;
+@global-muted-color:                            #243049;
+@global-link-color:                             #ff1744;
+@global-link-hover-color:                       #ff1744ca;
+@global-background:                             #131722;
+@global-primary-background:                     #ff1744;
+@global-secondary-background:                   #0c101b;
+@global-danger-background:                      #ff1744;
+@global-border:                                 #0c101b;
 
 //
 // Backgrounds
