--- a/src/less/app/footer.less
+++ b/src/less/app/footer.less
@@ -1,4 +1,9 @@
 footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    
     a{
         color: @global-inverse-color;
         &:hover,
@@ -16,7 +21,7 @@ footer {
         position: absolute;
         z-index: 1000;
         left: 0;
-        bottom: 0;
+        //
         
         .small-circle {
             position: absolute;
