--- a/src/less/app/song-playing.less
+++ b/src/less/app/song-playing.less
@@ -70,6 +70,7 @@
         border-radius: 50%;
         font-size: 30px;
         text-align: center;
+        border: 2px solid @global-inverse-color;
 
         .fa-times {
           display: none;
