Some Updates To Landing Page Design

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,5 +1,5 @@
+@import "app/general";
+@import "app/landing-page";
 @import "app/footer";
 @import "app/play-queue";
 @import "app/song-playing";
-    
-
