--- a/src/less/app/landing-page.less
+++ b/src/less/app/landing-page.less
@@ -1,3 +1,9 @@
+header {
+    .fad {
+        font-size: 32px;
+    }
+}
+
 footer {
     .ocean {
         height: 80px;
@@ -49,5 +55,10 @@ footer {
     .content {
         background: @global-inverse-color;
         opacity: 0.95;
+
+        .fab,
+        .fad {
+            font-size: 1.3rem;
+        }
     }
 }
