--- a/src/less/app/landing-page.less
+++ b/src/less/app/landing-page.less
@@ -4,6 +4,14 @@ header {
     }
 }
 
+#plans {
+    li {
+        color: @global-inverse-color;
+    }
+}
+
+
+
 footer {
     .ocean {
         height: 80px;
