--- a/src/less/app/general.less
+++ b/src/less/app/general.less
@@ -3,7 +3,7 @@ html {
 }
 
 .uk-text-primary {
-    color: @global-primary-background;
+    color: @global-primary-background  !important;
 }
 
 .suggest-button {
